tests/netedit/basic/configs/netecfg/load/invalid/datas/errors.netedit
Error: Cannot read file 'dummy.dat.xml'!
Error: Loading of dummy.dat.xml failed.
